gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proteus-gateway
  namespace: proteus
  labels:
    app: proteus-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: proteus-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 40%
      maxUnavailable: 40%
  template:
    metadata:
      labels:
        app: proteus-gateway
    spec:
      containers:
        - name: proteus-gateway
          image: ahmedalsunbati27/proteus-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
