gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proteus-gateway
  labels:
    app: proteus-gateway
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: proteus-gateway
